--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -18,6 +18,7 @@
     "download-zkeys": "./maci-scripts/download_zkeys.sh"
   },
   "dependencies": {
+    "@anon-aadhaar/contracts": "^2.4.0",
     "@commander-js/extra-typings": "^12.0.1",
     "@typechain/ethers-v6": "~0.5.1",
     "@zk-kit/eddsa-poseidon": "^0.11.0",
